--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         }];
 
         var tableSchema = {
-            id: "TestData_earthquakeFeed",
-            alias: "Earthquakes with magnitude greater than 4.5 in the last seven days",
+            id: "TestData",
+            alias: "P2OPS Test",
             columns: cols
         };
 
