--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>USGS Earthquake Feed</title>
+    <title>Test</title>
     <meta http-equiv="Cache-Control" content="no-store" />
     
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -63,7 +63,7 @@ $.getJSON("p2ops.json", function(json) {
     // Create event listeners for when the user submits the form
     $(document).ready(function() {
         $("#submitButton").click(function() {
-            tableau.connectionName = "Test Data: USGS Earthquake Feed"; // This will be the data source name in Tableau
+            tableau.connectionName = "Test Data_p2ops"; // This will be the data source name in Tableau
             tableau.submit(); // This sends the connector object to Tableau
         });
     });
