--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@ $.getJSON("p2ops.json", function(json) {
             tableau.submit(); // This sends the connector object to Tableau
         });
     });
+	
+	 $(document).ready(function() {
+        $("#inputForm").click(function() {
+            tableau.connectionName = "Test Data_p2ops"; // This will be the data source name in Tableau
+            tableau.submit(); // This sends the connector object to Tableau
+        });
+    });
 })();
 
 
