--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             alias: "name",
             dataType: tableau.dataTypeEnum.string
 	}, {
-            id: "test",
-            alias: "Test",
+            id: "mag",
+            alias: "Mag",
             dataType: tableau.dataTypeEnum.string
      
         }];
 
         var tableSchema = {
-            id: "TestData",
-            alias: "P2OPS Test",
+            id: "Test_feed",
+            alias: "Test feed",
             columns: cols
         };
 
@@ -38,17 +38,19 @@
 
     // Download the data
     myConnector.getData = function(table, doneCallback) {
-$.getJSON("p2ops.json", function(json) {
-
-            var feat = json.types;
-		var featOne = feat.schema
-			var featTwo = featOne.simpleType,
+//$.getJSON("p2ops.json", function(json) {
+  $.getJSON("https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_week.geojson", function(resp) {
+            var feat = resp.types;
+		//var featOne = feat.schema
+		//	var featTwo = featOne.simpleType,
                 tableData = [];
             // Iterate over the JSON object
-            for (var i = 0, len = featTwo.length; i < len; i++) {
+           // for (var i = 0, len = featTwo.length; i < len; i++) {
+	  for (var i = 0, len = feat.length; i < len; i++) {
                 tableData.push({
-                    "id": featTwo[i].id,
-		    "test": featTwo[i]['@name']
+                    "id": feat[i].id,
+		    "test": feat[i].mag
+		   // "test": featTwo[i]['@name']
                   
                 });
             }
@@ -63,13 +65,16 @@ $.getJSON("p2ops.json", function(json) {
     // Create event listeners for when the user submits the form
     $(document).ready(function() {
         $("#submitButton").click(function() {
-            tableau.connectionName = "Test Data_p2ops"; // This will be the data source name in Tableau
+            tableau.connectionName = "Test Data: USGS Earthquake Feed"; // This will be the data source name in Tableau
+            tableau.submit(); // This sends the connector object to Tableau
+        });
+ $("#inputFormn").click(function() {
+            tableau.connectionName = "Test Data: USGS Earthquake Feed"; // This will be the data source name in Tableau
             tableau.submit(); // This sends the connector object to Tableau
         });
     });
-	
-	
 })();
+
 
 
     </script>
