--- a/index.html
+++ b/index.html
@@ -96,25 +96,27 @@
         <div class="row vertical-center-row">
            <div class="text-center col-md-4 col-md-offset-4">
 
-<form id="inputForm" action="">
-  Enter URL for XML data: 
+<p id = "inputDescription">Enter URL to JSON file</p>
+<input id="inputURL" >
+  <!--<input type="text" name="xmlUrl" size="50"/>-->
+  <!--
+      <div id="dragandrophandler">Or Drag & Drop Files Here</div>
+      <br>
+      Or paste XML data below
+      <br>
+      <textarea name="xmlText" rows="10" cols="70"/></textarea>
+      <br>
+  -->
+  
+  <!--<input type="submit" value="Get Data!">-->
+  <!--//submit url button--->
+  <button type = "button" id = "submitUrl" class = "btn btn-success" style = "margin: 10px;">Submit</button>
   <br>
-  <input type="text" name="xmlUrl" size="50" />  
-  <br>
-  <div id="dragandrophandler">Or Drag & Drop Files Here</div>
-  <br>
-  Or paste XML data below
-  <br>
-  <textarea name="xmlText" rows="10" cols="70"/></textarea>
-<br>
-  <input type="submit" value="Get Data!">
-</form>
-
-                 <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Test Data!</button>
-            </div>
-        </div>
-    </div>
-
+  <!--button getting data from default dataset (earthquake or p2ops file)-->
+  <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Test Data</button>
+  </div>
+ </div>
+</div>
 
 
 </body>
