--- a/xml.html
+++ b/xml.html
@@ -1,13 +1,8 @@
-
 <html>
 <head>
 <title>XML Connector</title>
-    <meta http-equiv="Cache-Control" content="no-store" />
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js" type="text/javascript"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://connectors.tableau.com/libs/tableauwdc-1.1.1.js" type="text/javascript"></script>
 <script type="text/javascript">
  
 (function() {
@@ -16,7 +11,7 @@
     tableau.connectionName = 'XML data';
     tableau.initCallback();
   };
-  myConnector.getSchema() = function() {
+  myConnector.getColumnHeaders = function() {
     _retrieveXmlData(function (tableData) {
       var headers = tableData.headers;
       var fieldNames = [];
@@ -31,7 +26,7 @@
     });
   }
       
-  myConnector.getData = function (lastRecordToken) {
+  myConnector.getTableData = function (lastRecordToken) {
     _retrieveXmlData(function (tableData) {
       var rowData = tableData.rowData;
       tableau.dataCallback(rowData, rowData.length.toString(), false);
@@ -264,4 +259,3 @@ $(document).ready(function(){
 
 </body>
 </html>
-
