--- a/xml.html
+++ b/xml.html
@@ -80,7 +80,7 @@ function _yqlProxyAjaxRequest2(url, successCallback){
   var yqlQueryBase = "http://query.yahooapis.com/v1/public/yql?q=";
   var query = "select * from htmlstring where url='" + url + "'";
   var restOfQueryString = "&format=xml";
-  var yqlUrl = yqlQueryBase + encodeURIComponent(query) + restOfQueryString;
+  var yqlUrl = yqlQueryBase + encodeURIComponent(query) + restOfQueryString + "&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
   _ajaxRequestHelper(url, successCallback, yqlUrl, _giveUpOnUrl9);
 }
 function _giveUpOnUrl9(url, successCallback) {
