--- a/xml.html
+++ b/xml.html
@@ -79,8 +79,8 @@ function _basicAjaxRequest1(url, successCallback){
 function _yqlProxyAjaxRequest2(url, successCallback){
   var yqlQueryBase = "http://query.yahooapis.com/v1/public/yql?q=";
   var query = "select * from htmlstring where url='" + url + "'" AND xpath='//div'";
-  var restOfQueryString = "&format=xml"  + "&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
-  var yqlUrl = yqlQueryBase + encodeURIComponent(query) + restOfQueryString;
+  var restOfQueryString = "&format=xml" ;
+  var yqlUrl = yqlQueryBase + encodeURIComponent(query) + restOfQueryString + "&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
   _ajaxRequestHelper(url, successCallback, yqlUrl, _giveUpOnUrl9);
 }
 function _giveUpOnUrl9(url, successCallback) {
