--- a/xmlCopy.html
+++ b/xmlCopy.html
@@ -43,6 +43,9 @@ function _retrieveXmlData(retrieveDataCallback) {
 	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 		myFunction(this);
+		var xmlDoc = this.responseXML;
+		window.cachedTableData = _xmlToTable(xmlDoc);
+		
 		}
 	};
 	xhttp.open('GET', 'https://www.w3schools.com/xml/cd_catalog.xml', true);
@@ -73,6 +76,22 @@ function _retrieveXmlData(retrieveDataCallback) {
    //retrieveDataCallback(window.cachedTableData);
 }
 
+	
+function myFunction(xml) {
+  var x, i, xmlDoc, table;
+  xmlDoc = xml.responseXML;
+  table = "<tr><th>Artist</th><th>Title</th></tr>";
+  x = xmlDoc.getElementsByTagName("CD")
+  for (i = 0; i < x.length; i++) { 
+    table += "<tr><td>" + 
+    x[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue +
+    "</td><td>" +
+    x[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue +
+    "</td></tr>";
+  }
+  document.getElementById("demo").innerHTML = table;
+}
+	
 
 // There are a lot of ways to handle URLS. Sometimes we'll need workarounds for CORS. These
 // methods chain together a series of attempts to get the data at the given url
