--- a/xmlCopy.html
+++ b/xmlCopy.html
@@ -42,7 +42,7 @@ function _retrieveXmlData(retrieveDataCallback) {
 	var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
-		myFunction(this);
+		//myFunction(this);
 		var xmlDoc = this.responseXML;
 		window.cachedTableData = _xmlToTable(xmlDoc);
 		
