--- a/xmlCopy.html
+++ b/xmlCopy.html
@@ -42,9 +42,7 @@ function _retrieveXmlData(retrieveDataCallback) {
 	var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
-		//myFunction(this);
-		var xmlDoc = this.responseXML;
-		window.cachedTableData = _xmlToTable(xmlDoc);
+		myFunction(this);
 		
 		}
 	};
@@ -77,7 +75,10 @@ function _retrieveXmlData(retrieveDataCallback) {
 }
 
 	
-function myFunction(xml) {
+function myFunction(xml) {	
+  var xmlDoc = xml.responseXML;
+  window.cachedTableData = _xmlToTable(xmlDoc);
+  /*
   var x, i, xmlDoc, table;
   xmlDoc = xml.responseXML;
   table = "<tr><th>Artist</th><th>Title</th></tr>";
@@ -90,6 +91,7 @@ function myFunction(xml) {
     "</td></tr>";
   }
   document.getElementById("demo").innerHTML = table;
+  */
 }
 	
 
