--- a/xmlCopy.html
+++ b/xmlCopy.html
@@ -45,7 +45,7 @@ function _retrieveXmlData(retrieveDataCallback) {
         window.cachedTableData = _xmlToTable(data);
         retrieveDataCallback(window.cachedTableData);
       };
-      _basicAjaxRequest1(conData.xmlUrl, successCallback);
+      //_basicAjaxRequest1(conData.xmlUrl, successCallback);
       //here try another approach not using yql but xmlHttpRequest?
       //try xml dom to get url (xml http request)
 	var xhttp = new XMLHttpRequest();
@@ -68,8 +68,7 @@ function _retrieveXmlData(retrieveDataCallback) {
       return;
     }
   }
-  */
-   //retrieveDataCallback(window.cachedTableData);
+ retrieveDataCallback(window.cachedTableData);
 }
 
 	
@@ -114,9 +113,9 @@ function _basicAjaxRequest1(url, successCallback){
 // try to use yql as a proxy
 function _yqlProxyAjaxRequest2(url, successCallback){
   var yqlQueryBase = "http://query.yahooapis.com/v1/public/yql?q=";
-  var query = "select * from html where url='" + url + "'";
+  var query = "select * from htmlstring where url='" + url + "'";
   var restOfQueryString = "&format=xml" ;
-  var yqlUrl = yqlQueryBase + encodeURIComponent(query) + restOfQueryString;
+  var yqlUrl = yqlQueryBase + encodeURIComponent(query) + restOfQueryString + "&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
   _ajaxRequestHelper(url, successCallback, yqlUrl, _giveUpOnUrl9);
 }
 function _giveUpOnUrl9(url, successCallback) {
