--- a/xml_schema.html
+++ b/xml_schema.html
@@ -30,23 +30,24 @@
     myConnector.getData = function(table, doneCallback) {
       var xhttp = new XMLHttpRequest();
     	xhttp.onreadystatechange = function() {
-		    if (this.readyState == 4 && this.status == 200) {
-             var xmlDoc = xml.responseXML;
-             var tableCD = xmlDoc.getElementsByTagName("CD")
-             tableData = [];
-             for (i = 0; i < tableCD.length; i++) { 
-                tableDAta.push({
-                    "id": tableCD[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue,
-                    "artist": tableCD[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue
-                });
-             } 
-           }
+		if (this.readyState == 4 && this.status == 200) {
+           		var xmlDoc = xml.responseXML;
+            		var tableCD = xmlDoc.getElementsByTagName("CD"):
+			tableData = [];
+           		for (i = 0; i < tableCD.length; i++) { 
+               			tableDAta.push({
+                   			 "id": tableCD[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue,
+                  			  "artist": tableCD[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue
+                		});
+            		}
+          	 }
+	};
         xhttp.open('GET', 'https://www.w3schools.com/xml/cd_catalog.xml', true);
-	      xhttp.send();
-         table.appendRows(tableData);
-            doneCallback();
-		    });
-	    };
+	xhttp.send();
+        table.appendRows(tableData);
+        doneCallback();
+	});
+  
       tableau.registerConnector(myConnector);
       
 
