--- a/xml_schema.html
+++ b/xml_schema.html
@@ -32,7 +32,7 @@
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
            		var xmlDoc = xml.responseXML;
-            		var tableCD = xmlDoc.getElementsByTagName("CD"):
+            		var tableCD = xmlDoc.getElementsByTagName("CD");
 			tableData = [];
            		for (i = 0; i < tableCD.length; i++) { 
                			tableDAta.push({
