--- a/xml_schema.html
+++ b/xml_schema.html
@@ -55,7 +55,7 @@ function myFunction(xml) {
   var tableCD = xmlDoc.getElementsByTagName("CD");
   var tableData = [];
   for (i = 0; i < tableCD.length; i++) { 
-        tableDAta.push({
+        tableData.push({
                "id": tableCD[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue,
                "artist": tableCD[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue
         });
