--- a/xml_schema.html
+++ b/xml_schema.html
@@ -53,7 +53,7 @@
 function myFunction(xml) {
   var xmlDoc = xml.responseXML;
   var tableCD = xmlDoc.getElementsByTagName("CD");
-  var tableData = [];
+  tableData = [];
   for (i = 0; i < tableCD.length; i++) { 
         tableData.push({
                "id": tableCD[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue,
