--- a/xml_schema.html
+++ b/xml_schema.html
@@ -32,22 +32,28 @@
 	
 // Get the data from default link/file ==> tbd: get data from input Url
  myConnector.getData = function(table, doneCallback) {
-       const proxyurl = "https://cors-anywhere.herokuapp.com/";
-
+      const proxyurl = "https://cors-anywhere.herokuapp.com/";
       var xhttp = new XMLHttpRequest();
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
-			myFunction(this);
+			//myFunction(this);
+			var xmlDoc = xml.responseXML;
+ 			var tableCD = xmlDoc.getElementsByTagName("CD");
+  			tableData = [];
+  			for (i = 0; i < tableCD.length; i++) { 
+        			tableData.push({
+               				"id": tableCD[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue,
+               				"artist": tableCD[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue
+       				});
+  			}
+  			table.appendRows(tableData);
 		        doneCallback();
-
           	 }
 	};
 	
         xhttp.open('GET', proxyurl + 'https://www.w3schools.com/xml/cd_catalog.xml', true);
 	xhttp.send();
-
 	};
-  
       tableau.registerConnector(myConnector);
       
 function myFunction(xml) {
