--- a/xml_schema.html
+++ b/xml_schema.html
@@ -51,7 +51,7 @@
           	 }
 	};
 	
-        xhttp.open('GET', 'https://www.w3schools.com/xml/cd_catalog.xml', true);
+        xhttp.open('GET', proxyurl + 'https://www.w3schools.com/xml/cd_catalog.xml', true);
 	xhttp.send();
 	};
       tableau.registerConnector(myConnector);
