--- a/xml_schema.html
+++ b/xml_schema.html
@@ -37,7 +37,7 @@
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			//myFunction(this);
-			var xmlDoc = xml.responseXML;
+			var xmlDoc = this.responseXML;
  			var tableCD = xmlDoc.getElementsByTagName("CD");
   			tableData = [];
   			for (i = 0; i < tableCD.length; i++) { 
