--- a/xml_schema.html
+++ b/xml_schema.html
@@ -51,7 +51,7 @@
           	 }
 	};
 	
-        xhttp.open('GET', proxyurl + 'https://www.w3schools.com/xml/cd_catalog.xml', true);
+        xhttp.open('GET', proxyurl + 'http://sapdsma2.sap.infineon.com:8007/sap/bc/srt/wsdl/flv_10002P111AD1/sdef_url/ZBC_P2OPS_READ_DATA?sap-client=100', true);
 	xhttp.send();
 	};
       tableau.registerConnector(myConnector);
