--- a/xml_schema.html
+++ b/xml_schema.html
@@ -14,12 +14,12 @@
     // Define the schema
     myConnector.getSchema = function(schemaCallback) {
         var cols = [{
-            id: "id",
-            alias: "col1",
+            id: "col1",
+            alias: "col1_alias",
             dataType: tableau.dataTypeEnum.string
 	}, {
-            id: "artist",
-            alias: "col2",
+            id: "col2",
+            alias: "col2_alias",
             dataType: tableau.dataTypeEnum.string
         }];
         var tableSchema = {
