--- a/xml_schema.html
+++ b/xml_schema.html
@@ -32,7 +32,7 @@
 	
 // Get the data from default link/file ==> tbd: get data from input Url
  myConnector.getData = function(table, doneCallback) {
-      const proxyurl = "https://cors-anywhere.herokuapp.com/";
+      const proxyurl = "http://cors-anywhere.herokuapp.com/";
       var xhttp = new XMLHttpRequest();
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
