--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -17,6 +17,7 @@
       var headers = schemaCallback.headers;
       var fieldNames = [];
       var fieldTypes = [];
+	    console.log("getting schema");
       for (var fieldName in headers) {
         if (headers.hasOwnProperty(fieldName)) {
           fieldNames.push(fieldName);
