--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -20,7 +20,7 @@
       console.log("getting schema");
       for (var fieldName in headers) {
         if (headers.hasOwnProperty(fieldName)) {
-	  console.log("headers: " fieldName);
+	  console.log("headers: ");
           fieldNames.push(fieldName);
           fieldTypes.push(headers[fieldName]);
         }
