--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -17,13 +17,12 @@
       var headers = schemaCallback.headers;
       var fieldNames = [];
       var fieldTypes = [];
-      console.log("getting schema");
+      console.log("getting schema" + headers);
       for (var fieldName in headers) {
         if (headers.hasOwnProperty(fieldName)) {
 	  fieldNames.push(fieldName);
           fieldTypes.push(headers[fieldName]);
         }
-	      else { console.log("no headerse"); }
 
       }
         schemaCallback(fieldNames, fieldTypes); // tell tableau about the fields and their types
