--- a/xml_cd-catalog-schema.html
+++ b/xml_cd-catalog-schema.html
@@ -33,6 +33,7 @@
 // Get the data from default link/file ==> tbd: get data from input Url
  myConnector.getData = function(table, doneCallback) {
       const proxyurl = "https://cors-anywhere.herokuapp.com/";
+      //const proxyurl2 = "http://localhost:8889";
       var xhttp = new XMLHttpRequest();
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
