--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -11,21 +11,35 @@
 (function() {
     // Create the connector object
     var myConnector = tableau.makeConnector();
+    var xmlDoc;    
+	
 	
     // Define the schema (right now is hardcoded > get dynamically?)
     myConnector.getSchema = function(schemaCallback) {
-      _retrieveXmlData(function(tableData){
+	const proxyurl = "https://cors-anywhere.herokuapp.com/";
+        var xhttp = new XMLHttpRequest();
+    	xhttp.onreadystatechange = function() {
+		if (this.readyState == 4 && this.status == 200) {
+			xmlDoc = this.responseXML;
+ 			window.cachedTableData = _xmlToTable(xmlDoc);
+          	 }
+	};
+	//enter pre-defined url or take it from user input, but then have to figure out how to dynamically get the schema (right now is hardcoded)
+        xhttp.open('GET', proxyurl + 'https://www.w3schools.com/xml/cd_catalog.xml', true);
+	xhttp.send();      
+	    
+      /*_retrieveXmlData(function(tableData){
         var headers = tableData.headers;
         var fieldNames = [];
         var fieldTypes = [];
-        console.log("getting schema: " + headers);
+        console.log("getting schema);
         for (var fieldName in headers) {
           if (headers.hasOwnProperty(fieldName)) {
 	    fieldNames.push(fieldName);
             fieldTypes.push(headers[fieldName]);
           }
 
-        }
+        }*/
 	 var tableSchema = {
             id: "Test_feed",
             alias: "Test feed",
@@ -82,6 +96,7 @@ function _retrieveXmlData(retrieveDataCallback) {
 		if (this.readyState == 4 && this.status == 200) {
 			var xmlDoc = this.responseXML;
  			window.cachedTableData = _xmlToTable(xmlDoc);
+			retrieveDataCallback(window.cachedTableData);
           	 }
 	};
 	//enter pre-defined url or take it from user input, but then have to figure out how to dynamically get the schema (right now is hardcoded)
