--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -21,8 +21,8 @@
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			xmlDoc = this.responseXML;
- 			/*var headers = xmlDoc.headers;
-       			var fieldNames = [];
+ 			var headers = xmlDoc.headers;
+       			/*var fieldNames = [];
         		var fieldTypes = [];*/
        			console.log("getting schema" );
           	 }
