--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -24,7 +24,7 @@
  			var headers = xmlDoc.headers;
        			/*var fieldNames = [];
         		var fieldTypes = [];*/
-       			console.log("getting schema" );
+       			console.log("getting schema" + headers);
           	 }
 	};
 	//enter pre-defined url or take it from user input, but then have to figure out how to dynamically get the schema (right now is hardcoded)
