--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -19,11 +19,12 @@
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			var xmlDoc = this.responseXML;
+       			console.log("getting schema" + xmldoc);
+		
 			var cd = xmlDoc.getElementById("CD");
  			var headers = cd.headers;
        			var fieldNames = [];
         		var fieldTypes = [];
-       			console.log("getting schema" + headers);
 			var tableSchema = {
            			id: "Test_feed",
            			alias: "Test feed",
