--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -19,7 +19,7 @@
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			var xmlDoc = this.responseXML;
-       			console.log("getting schema" + xmldoc);
+       			console.log("getting schema" + xmlDoc);
 		
 			var cd = xmlDoc.getElementById("CD");
  			var headers = cd.headers;
