--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -22,6 +22,8 @@
        			console.log("getting schema" + xmlDoc);
 		
 			var cd = xmlDoc.getElementById("CD");
+			console.log("getting tbl" + cd.headers);
+
  			var headers = cd.headers;
        			var fieldNames = [];
         		var fieldTypes = [];
