--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -19,10 +19,10 @@
     	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			var xmlDoc = this.responseXML;
-       			console.log("getting schema" + xmlDoc);
+       			console.log("getting schema" + xmlDoc.length);
 		
 			var cd = xmlDoc.getElementById("CD");
-			console.log("getting tbl" + cd.headers);
+			console.log("getting tbl" + cd.length);
 
  			var headers = cd.headers;
        			var fieldNames = [];
