--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -590,25 +590,13 @@ $(document).ready(function(){
         <div class="row vertical-center-row">
            <div class="text-center col-md-4 col-md-offset-4">
 
-<p id = "inputDescription">Enter URL to JSON file</p>
+<p id = "inputDescription">Enter URL to XML file</p>
 <input id="inputURL" >
-  <!--<input type="text" name="xmlUrl" size="50"/>-->
-  <!--
-      <div id="dragandrophandler">Or Drag & Drop Files Here</div>
-      <br>
-      Or paste XML data below
-      <br>
-      <textarea name="xmlText" rows="10" cols="70"/></textarea>
-      <br>
-  -->
-  
-  <!--<input type="submit" value="Get Data!">-->
-  <!--//submit url button--->
-  <button type = "button" id = "submitUrl" class = "btn btn-success" style = "margin: 10px;">Submit</button>
+<button type = "button" id = "submitUrl" class = "btn btn-success" style = "margin: 10px;">Submit</button>
   <br>
-  <textarea name="xmlText" rows="10" cols="70"/></textarea>
-  <!--button getting data from default dataset (earthquake or p2ops file)-->
-  <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Test Data</button>
+<p id = "inputDescription">Paste XML file</p>
+<input id="xmlText"/>
+<button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Test Data</button>
   </div>
  </div>
 </div>
