--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -288,7 +288,7 @@ function _submitXMLToTableau(xmlString, xmlUrl) {
 <button type = "button" id = "submitUrl" class = "btn btn-success" style = "margin: 10px;">Submit</button>
   <br>
 <p id = "descriptionText">Paste XML file</p>
-<textarea id="inputText"/></textarea>
+<textarea id="inputText" rows="10" cols="70"//></textarea>
 <button type = "button" id = "submitText" class = "btn btn-success" style = "margin: 10px;">Submit</button>
   </div>
  </div>
