--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -32,6 +32,7 @@
             alias: "XML feed alias",
             columns: cols
         };
+		console.log(cols);
         schemaCallback([tableSchema]);
     };
 	
