--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -42,22 +42,15 @@
 	
 // Get the data from default link/file ==> tbd: get data from input Url
  myConnector.getData = function(table, doneCallback) {
-      const proxyurl = "http://cors-anywhere.herokuapp.com/";
-      var xhttp = new XMLHttpRequest();
-    	xhttp.onreadystatechange = function() {
-		if (this.readyState == 4 && this.status == 200) {
-			//myFunction(this);
-			var xmlDoc = this.responseXML;
- 			var tableCD = xmlDoc.getElementsByTagName("CD");
-  			tableData = [];
-  			for (i = 0; i < tableCD.length; i++) { 
-        			tableData.push({
-               				"id": tableCD[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue,
-               				"artist": tableCD[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue
-       				});
-  			}
-  			table.appendRows(tableData);
-		        doneCallback();
+      _retrieveXmlData(function (tableData) {
+     // var rowData = tableData.rowData;
+	table.appendRows(tableData);
+	doneCallback();
+      });
+  };
+  tableau.registerConnector(myConnector);
+
+  			
           	 }
 	};
 	//enter pre-defined url or take it from user input, but then have to figure out how to dynamically get the schema (right now is hardcoded)
