--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -78,7 +78,7 @@ function _retrieveXmlData(retrieveDataCallback) {
 	    
 	
 	    
-function _xmlHttpReq(conData.xmlUrl, successCallback) {   
+function _xmlHttpReq(url, successCallback) {   
        	const proxyurl = "https://cors-anywhere.herokuapp.com/";
         var xhttp = new XMLHttpRequest();
     	xhttp.onreadystatechange = function() {
