--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -57,11 +57,24 @@ function _retrieveXmlData(retrieveDataCallback) {
     var conData = JSON.parse(tableau.connectionData);
     var xmlString = conData.xmlString;
     if (conData.xmlUrl) {
-      var successCallback = function(data) {
+	const proxyurl = "https://cors-anywhere.herokuapp.com/";
+        var xhttp = new XMLHttpRequest();
+    	xhttp.onreadystatechange = function() {
+		if (this.readyState == 4 && this.status == 200) {
+			var xmlDoc = this.responseXML;
+			window.cachedTableData = _xmlToTable(xmlDoc);
+			retrieveDataCallback(window.cachedTableData);
+          	 }
+	};
+	//enter pre-defined url or take it from user input, but then have to figure out how to dynamically get the schema (right now is hardcoded)
+        xhttp.open('GET', proxyurl + 'https://www.w3schools.com/xml/cd_catalog.xml', true);
+	xhttp.send();
+	    
+      /*var successCallback = function(data) {
         window.cachedTableData = _xmlToTable(data);
         retrieveDataCallback(window.cachedTableData);
       };
-      _xmlHttpReq(conData.xmlUrl, successCallback);
+      _xmlHttpReq(conData.xmlUrl, successCallback);*/
       return;
     }
     try {
