--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -20,6 +20,7 @@
         for (var fieldName in headers) {
             if (headers.hasOwnProperty(fieldName)) {
 		fieldName = fieldName.replace('#','');
+		console.log(fieldName);
 		var singleCol = {
 			id: fieldName,
 			dataType: headers[fieldName]
