--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -44,10 +44,17 @@
 // Get the data from default link/file ==> tbd: get data from input Url
  myConnector.getData = function(table, doneCallback) {
       _retrieveXmlData(function (tableData) {
-	if (tableData.rowData != null){
-        var rowData = tableData.rowData;
-	console.log(rowData);
-	}
+	var rowData = tableData.rowData;
+        filtered = rowData.filter(function (a) {
+        	var temp = Object.keys(a).map(function (k) { return a[k]; }),
+           		 k = temp.join('|');
+       		if (!this[k] && temp.join('')) {
+            		this[k] = true;
+            		return true;
+        	}
+    	}, Object.create(null));
+	console.log(filtered);
+	
 	table.appendRows(tableData);
 	doneCallback();
       });
