--- a/xml_cd-catalog-schema_dynamic.html
+++ b/xml_cd-catalog-schema_dynamic.html
@@ -55,7 +55,7 @@
     	}, Object.create(null));
 	console.log(filtered);
 	
-	table.appendRows(tableData);
+	table.appendRows(filtered);
 	doneCallback();
       });
   };
